# src/controllers/index.ts
@@ -1,4 +1,5 @@
-export * from "./agencies.controller";
 export * from "./workflows.controller";
 export * from "./summaries.controller";
+export * from "./webhooks.controller";
+export * from "./agencies.controller";
 export * from "./signals.controller";
